@@ -9,6 +9,7 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 
+import am.ik.jvm.ByteCodeWriter;
 import am.ik.jvm.ConstantPool;
 import am.ik.jvm.ConstantPool.ClassConstant;
 import am.ik.jvm.ConstantPool.FieldrefConstant;
@@ -31,6 +32,23 @@ import am.ik.rontolisp.LispNames;
  * {@code vec:} call site is preceded by a {@code _simdInit} call so the bridge method
  * references resolve lazily (at their first execution), by which time the class is
  * defined in the program's own class loader.
+ *
+ * <p>
+ * {@code jdk.incubator.vector} is an OPTIONAL JDK module: on a runtime started without
+ * {@code --add-modules jdk.incubator.vector}, {@code Lookup.defineClass} itself fails to
+ * link the embedded bridge with a {@link LinkageError} ({@code NoClassDefFoundError} in
+ * practice) -- the template's verifier-visible types resolve at THAT call, before any
+ * bridge method runs. {@code _simdInit} catches it, leaves {@value #AVAILABLE_FIELD}
+ * false and prints the same one-line warning the interpreter prints
+ * ({@code RontoLispCli.enableSimd}), instead of letting the class-define failure surface
+ * at the caller as a raw {@code NoClassDefFoundError}. {@code _simdReady()} exposes that
+ * flag as one more {@code ops} entry ({@value #AVAILABLE}) so every accelerated call site
+ * -- {@link JvmSimdCompiler} and {@link JvmLinalgKernelCompiler}'s {@code --simd} rung --
+ * can check it BEFORE resolving a method reference into the (possibly never-defined)
+ * bridge class, and fall back to the scalar defun instead, exactly the interpreter's
+ * degrade (unlike {@code --blas}/{@code --gpu}, whose bridges never fail to define: their
+ * "is it there" probe runs a method call inside an already-linked bridge, not the
+ * {@code defineClass} itself).
  */
 final class JvmSimdRuntimeBuilder {
 
@@ -46,6 +64,20 @@ final class JvmSimdRuntimeBuilder {
 	/** The emitted init helper method name. */
 	static final String INIT_METHOD = "_simdInit";
 
+	/** The emitted availability accessor method name. */
+	private static final String READY_METHOD = "_simdReady";
+
+	/** The guard field backing {@link #READY_METHOD}. */
+	private static final String AVAILABLE_FIELD = "_simdAvailable";
+
+	/** The {@code ops} key of the availability accessor ({@link #READY_METHOD}). */
+	static final String AVAILABLE = "available";
+
+	/** Printed once, to {@code System.err}, when the bridge fails to define. */
+	private static final String UNAVAILABLE_WARNING = "rontolisp: warning: --simd: jdk.incubator.vector is unavailable, "
+			+ "running the scalar vec:/linalg: kernels; re-run with "
+			+ "`java --add-modules jdk.incubator.vector ...`, or use the native binary.";
+
 	/** Keeps each base64 string constant well under the 65535-byte Utf8 limit. */
 	private static final int CHUNK_SIZE = 40000;
 
@@ -53,14 +85,17 @@ final class JvmSimdRuntimeBuilder {
 	}
 
 	/**
-	 * The ready-to-emit {@code _simdInit} method, its guard field, and the constant-pool
-	 * references the accelerated {@code vec:} call-site compiler needs ({@code ops} keys:
-	 * {@code init}, plus one per kernel member name --
+	 * The ready-to-emit {@code _simdInit} and {@code _simdReady} methods, their guard
+	 * fields, and the constant-pool references the accelerated {@code vec:} /
+	 * {@code linalg:} call-site compilers need ({@code ops} keys: {@code init},
+	 * {@value #AVAILABLE}, plus one per kernel member name --
 	 * {@code add}/{@code sub}/{@code mul}/ {@code scale}/{@code dot}/{@code sum}/
 	 * {@code matvec}).
 	 */
 	record SimdRuntime(Utf8Constant initName, Utf8Constant initDesc, List<Integer> initCode, int maxStack,
-			int maxLocals, Utf8Constant initedFieldName, Utf8Constant initedFieldDesc,
+			int maxLocals, List<ByteCodeWriter.ExceptionTableEntry> initExceptionTable, Utf8Constant initedFieldName,
+			Utf8Constant initedFieldDesc, Utf8Constant availableFieldName, Utf8Constant availableFieldDesc,
+			Utf8Constant readyName, Utf8Constant readyDesc, List<Integer> readyCode,
 			Map<String, MethodrefConstant> ops) {
 	}
 
@@ -92,6 +127,10 @@ final class JvmSimdRuntimeBuilder {
 		Utf8Constant initedFieldName = cp.addUtf8("_simdInited");
 		Utf8Constant initedFieldDesc = cp.addUtf8("I");
 		FieldrefConstant initedField = cp.addFieldref(thisClass, cp.addNameAndType(initedFieldName, initedFieldDesc));
+		Utf8Constant availableFieldName = cp.addUtf8(AVAILABLE_FIELD);
+		Utf8Constant availableFieldDesc = cp.addUtf8("I");
+		FieldrefConstant availableField = cp.addFieldref(thisClass,
+				cp.addNameAndType(availableFieldName, availableFieldDesc));
 
 		ClassConstant base64Class = cp.addClass(cp.addUtf8("java/util/Base64"));
 		MethodrefConstant getDecoder = cp.addMethodref(base64Class,
@@ -105,6 +144,14 @@ final class JvmSimdRuntimeBuilder {
 		ClassConstant lookupClass = cp.addClass(cp.addUtf8("java/lang/invoke/MethodHandles$Lookup"));
 		MethodrefConstant defineClass = cp.addMethodref(lookupClass,
 				cp.addNameAndType(cp.addUtf8("defineClass"), cp.addUtf8("([B)Ljava/lang/Class;")));
+		ClassConstant linkageErrorClass = cp.addClass(cp.addUtf8("java/lang/LinkageError"));
+		ClassConstant systemClass = cp.addClass(cp.addUtf8("java/lang/System"));
+		FieldrefConstant systemErr = cp.addFieldref(systemClass,
+				cp.addNameAndType(cp.addUtf8("err"), cp.addUtf8("Ljava/io/PrintStream;")));
+		ClassConstant printStreamClass = cp.addClass(cp.addUtf8("java/io/PrintStream"));
+		MethodrefConstant println = cp.addMethodref(printStreamClass,
+				cp.addNameAndType(cp.addUtf8("println"), cp.addUtf8("(Ljava/lang/String;)V")));
+		ConstantPool.StringConstant warning = cp.addString(UNAVAILABLE_WARNING);
 
 		ClassConstant bridgeClass = cp.addClass(cp.addUtf8(bridgeName));
 		String binaryDesc = "(Ljava/lang/Object;Ljava/lang/Object;)Ljava/lang/Object;";
@@ -115,6 +162,9 @@ final class JvmSimdRuntimeBuilder {
 		Utf8Constant initName = cp.addUtf8(INIT_METHOD);
 		Utf8Constant initDesc = cp.addUtf8("()V");
 		ops.put("init", cp.addMethodref(thisClass, cp.addNameAndType(initName, initDesc)));
+		Utf8Constant readyName = cp.addUtf8(READY_METHOD);
+		Utf8Constant readyDesc = cp.addUtf8("()Z");
+		ops.put(AVAILABLE, cp.addMethodref(thisClass, cp.addNameAndType(readyName, readyDesc)));
 		ops.put(LispNames.VEC_ADD,
 				cp.addMethodref(bridgeClass, cp.addNameAndType(cp.addUtf8("simdAdd"), cp.addUtf8(binaryDesc))));
 		ops.put(LispNames.VEC_SUB,
@@ -263,14 +313,27 @@ final class JvmSimdRuntimeBuilder {
 		}
 
 		// --- _simdInit body (self-contained: no bind callback) ---
-		List<Integer> code = new ArrayList<>();
 		// if (_simdInited != 0) return;
+		// try {
+		// MethodHandles.lookup().defineClass(Base64.getDecoder().decode(chunks...));
+		// _simdAvailable = 1;
+		// } catch (LinkageError e) {
+		// // jdk.incubator.vector missing: leave _simdAvailable false, warn once.
+		// System.err.println(UNAVAILABLE_WARNING);
+		// }
+		// _simdInited = 1;
+		List<Integer> code = new ArrayList<>();
 		code.add(Opcode.GETSTATIC);
 		JvmRuntimeBuilder.emitU2(code, initedField.index());
 		int guardPos = code.size();
 		code.add(Opcode.IFNE);
 		JvmRuntimeBuilder.emitU2(code, 0);
-		// MethodHandles.lookup().defineClass(Base64.getDecoder().decode(chunks...))
+		// MethodHandles.lookup().defineClass(Base64.getDecoder().decode(chunks...)) --
+		// the protected region: a runtime missing jdk.incubator.vector fails to LINK
+		// the bridge here (its verifier-visible types resolve at defineClass, not at
+		// the first bridge method call), and this catches that instead of the class
+		// define failure surfacing as a raw NoClassDefFoundError at some call site.
+		int tryStart = code.size();
 		code.add(Opcode.INVOKESTATIC);
 		JvmRuntimeBuilder.emitU2(code, getDecoder.index()); // [decoder]
 		JvmRuntimeBuilder.emitLdc(code, chunks.get(0).index()); // [decoder, str]
@@ -287,14 +350,41 @@ final class JvmSimdRuntimeBuilder {
 		code.add(Opcode.INVOKEVIRTUAL);
 		JvmRuntimeBuilder.emitU2(code, defineClass.index()); // [class]
 		code.add(Opcode.POP);
-		// _simdInited = 1
+		// _simdAvailable = 1
+		code.add(Opcode.ICONST_1);
+		code.add(Opcode.PUTSTATIC);
+		JvmRuntimeBuilder.emitU2(code, availableField.index());
+		int skipHandlerPos = code.size();
+		code.add(Opcode.GOTO);
+		JvmRuntimeBuilder.emitU2(code, 0);
+		// catch (LinkageError e) -- the operand stack holds just the caught
+		// throwable; discard it and print the interpreter's warning once.
+		int handlerPc = code.size();
+		code.add(Opcode.POP);
+		code.add(Opcode.GETSTATIC);
+		JvmRuntimeBuilder.emitU2(code, systemErr.index()); // [err]
+		JvmRuntimeBuilder.emitLdc(code, warning.index()); // [err, msg]
+		code.add(Opcode.INVOKEVIRTUAL);
+		JvmRuntimeBuilder.emitU2(code, println.index());
+		JvmRuntimeBuilder.patchBranch(code, skipHandlerPos, code.size());
+		// _simdInited = 1 (tried, either way -- never re-attempt, never warn twice)
 		code.add(Opcode.ICONST_1);
 		code.add(Opcode.PUTSTATIC);
 		JvmRuntimeBuilder.emitU2(code, initedField.index());
 		JvmRuntimeBuilder.patchBranch(code, guardPos, code.size());
 		code.add(Opcode.RETURN);
 
-		return new SimdRuntime(initName, initDesc, code, 3, 1, initedFieldName, initedFieldDesc, ops);
+		List<ByteCodeWriter.ExceptionTableEntry> initExceptionTable = List
+			.of(new ByteCodeWriter.ExceptionTableEntry(tryStart, handlerPc, handlerPc, linkageErrorClass.index()));
+
+		// --- _simdReady body: return _simdAvailable != 0; ---
+		List<Integer> readyCode = new ArrayList<>();
+		readyCode.add(Opcode.GETSTATIC);
+		JvmRuntimeBuilder.emitU2(readyCode, availableField.index());
+		readyCode.add(Opcode.IRETURN);
+
+		return new SimdRuntime(initName, initDesc, code, 3, 1, initExceptionTable, initedFieldName, initedFieldDesc,
+				availableFieldName, availableFieldDesc, readyName, readyDesc, readyCode, ops);
 	}
 
 	/** Reads the compiled {@link JvmSimdVectorTemplate} bytecode from the classpath. */
